[package]
name = "diffbot_lib"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
octocrab = "0.39.0"
eyre = "0.6.12"
derive_builder = "0.20.1"
chrono = "0.4.38"
reqwest = "0.12.7"
futures-lite = "2.3.0"
simple_logger = "5.0.0"
sha2 = "0.10.8"
hmac = "0.12.1"
hex = "0.4.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "time"] }
tracing-panic = "0.1.2"
tracing-loki = "0.2.5"
flume = "0.11.0"

actix-web = "4.9.0"

async-fs = "2.1.2"
base64 = "0.22.1"
