[package]
name = "icondiffbot2"
version = "0.1.0"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
octocrab = "0.39.0"
dmm-tools = { git = "https://github.com/jupyterkat/SpacemanDMM/" }
dreammaker = { git = "https://github.com/jupyterkat/SpacemanDMM/" }
once_cell = "1.19.0"
jsonwebtoken = "9.3.0"
reqwest = "0.12.7"
diffbot_lib = { path = "../diffbot_lib" }
eyre = "0.6.12"
simple-eyre = "0.3.1"
ndarray = "0.16.1"
rayon = "1.10.0"
toml = "0.8.19"
ahash = "0.8.11"
hashbrown = { version = "0.14.5", features = ["rayon"] }
hex = { version = "0.4.3", features = ["serde"] }
tracing-loki = "0.2.5"
flume = "0.11.0"

actix-web = "4.9.0"
actix-files = "0.6.6"

mysql_async = "0.34.2"
time = "0.3.36"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6.0"

[dependencies.tracing]
version = "0.1.40"
features = ["attributes"]
