[package]
name = "mapdiffbot2"
version = "0.1.0"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128" }
toml = "0.8.19"
octocrab = "0.39.0"
dmm-tools = { git = "https://github.com/jupyterkat/SpacemanDMM/" }
dreammaker = { git = "https://github.com/jupyterkat/SpacemanDMM/" }
ahash = "0.8.11"
path-absolutize = "3.1.1"
jsonwebtoken = "9.3.0"
eyre = "0.6.12"
simple-eyre = "0.3.1"
rayon = "1.10.0"
derive_builder = "0.20.1"
once_cell = "1.19.0"
image = "0.25.2"
diffbot_lib = { path = "../diffbot_lib" }
git2 = "0.19.0"
walkdir = "2.5.0"
delay_timer = "0.11.6"
hex = { version = "0.4.3", features = ["serde"] }
itertools = "0.13.0"
indexmap = { version = "2.5.0", features = ["rayon"] }
tracing-loki = "0.2.5"
flume = "0.11.0"

actix-web = "4.9.0"
actix-files = "0.6.6"

object_store = { version = "0.11.0", features = ["azure"] }
tokio = { version = "1.40.0", features = ["io-util", "rt"] }

mysql_async = "0.34.2"
time = "0.3.36"
secrecy = "0.8.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6.0"
